# command_line_rust

./: Cargo.toml  download_files.sh  readme.md
error_utils/: Cargo.toml
error_utils/src/: lib.rs
findr/: Cargo.toml  readme.md
findr/src/: cli.rs  lib.rs  main.rs
findr/tests/: int_tests.rs
findr/tests/inputs/d/: b.csv
headr/: Cargo.toml  readme.md
headr/src/: arguments.rs  lib.rs  main.rs  reader.rs  result.rs
headr/tests/: headr.rs
headr/tests/inputs/: multibyte.txt  oneline.txt
uniqr/: Cargo.toml  readme.md
uniqr/src/: cli_args.rs  lib.rs  main.rs  matcher.rs
uniqr/tests/: error_tests.rs  integration_tests.rs
uniqr/tests/common/: mod.rs
uniqr/tests/inputs/: in.txt
wcr/: Cargo.toml  readme.md
wcr/src/: args.rs  counts.rs  lib.rs  main.rs
wcr/src/counts/: result.rs
wcr/tests/: wcr.rs
