[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
clap = { version = "4.5.7", features = ["derive"] }
predicates = "3.1.0"
regex = "1.10.5"
walkdir = "2.5.0"
error_utils = { path = "../error_utils" }
